# dtc_frame

./: README.md  main.py  main1.py  pyproject.toml  requirements.txt  setup.py  tools.py
reports/allure-results/: result_20250330_214041.json
src/test_framework/: __init__.py
src/test_framework/api/: __init__.py  client.py
src/test_framework/data/: parser.py
src/test_framework/data_parser/: __init__.py  parser.py
src/test_framework/engine/: runner.py
src/test_framework/report/: __init__.py  generator.py
src/test_framework/report/templates/: report.html
src/test_framework/session/: __init__.py  manager.py
src/test_framework/step_engine/: engine.py
src/test_framework/ui/: page_object.py
src/test_framework/utils/: logger.py
test_data/: bilibili_login.yaml  login.yaml
tests/: test_bilibili_login.py  test_login.py
tests/sessions/: bilibili_session_ui.json
